# cardea-weather

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  types.rs  weather.rs
